--- a/system/templates/msg_verify_code.html
+++ b/system/templates/msg_verify_code.html
@@ -6,13 +6,10 @@
             <th style="height: 80px;">{{ title }}</th>
         </tr>
         <tr style="border: 1px solid #eee;">
-            <td style="height: 50px;">{% trans 'Hello' %} {{ user.username }},</td>
+            <td style="height: 50px;">{% trans 'Hello' %} {{ username }},</td>
         </tr>
         <tr style="border: 1px solid #eee">
             <td style="height: 50px;">{% trans 'Verify code' %}: <span style="font-weight: bold;">{{ code }}</span></td>
-        </tr>
-        <tr style="border: 1px solid #eee;">
-            <td style="height: 30px;"> {% trans 'Copy the verification code to the Reset Password page to reset the password.' %} </td>
         </tr>
         <tr style="border: 1px solid #eee">
             <td style="height: 30px;">{% trans 'The validity period of the verification code is' %}{{ ttl }}{% trans 'seconds'%}</td>
