--- a/system/templates/msg_verify_code.html
+++ b/system/templates/msg_verify_code.html
@@ -12,7 +12,8 @@
             <td style="height: 50px;">{% trans 'Verify code' %}: <span style="font-weight: bold;">{{ code }}</span></td>
         </tr>
         <tr style="border: 1px solid #eee">
-            <td style="height: 30px;">{% trans 'The validity period of the verification code is' %}{{ ttl }}{% trans 'seconds'%}</td>
+            <td style="height: 30px;">
+                {% trans 'The validity period of the verification code is' %}{{ ttl }}{% trans 'seconds' %}</td>
         </tr>
         <tr style="border: 1px solid #eee">
             <td style="height: 30px;">{% trans 'If you have any questions, you can contact the administrator' %}</td>
