refactor: 重构通知应用

--- a/system/templates/msg_verify_code.html
+++ b/system/templates/msg_verify_code.html
@@ -6,7 +6,7 @@
             <th style="height: 80px;">{{ title }}</th>
         </tr>
         <tr style="border: 1px solid #eee;">
-            <td style="height: 50px;">{% trans 'Hello' %} {{ username }},</td>
+            <td style="height: 50px;">{% trans 'Hello' %} {{ username }} </td>
         </tr>
         <tr style="border: 1px solid #eee">
             <td style="height: 50px;">{% trans 'Verify code' %}: <span style="font-weight: bold;">{{ code }}</span></td>
