perf: 优化导入数据任务

--- a/common/templates/notify/msg_task.html
+++ b/common/templates/notify/msg_task.html
@@ -3,12 +3,22 @@
     {% trans 'Hello' %} {{ name }},
 </p>
 <p>
-    {% trans 'Your Task is finished' %}
-</p>
-<p>
     <b>{% trans 'Task name' %}:</b> {{ task_name }}<br>
-    <b>{% trans 'Task Id' %}:</b> {{ task_id }}<br>
-    <b>{% trans 'Task start date' %}:</b> {{ start_time }}<br>
-    <b>{% trans 'Task end date' %}:</b> {{ end_time }}<br>
-    <b>{% trans 'Task result' %}:</b> {{ result }}
+    {% trans 'Your Task is finished' %}<br>
+    {% if state %}
+        <span style="color: green;">{{ status }}</span>
+    {% else %}
+        <span style="color: red;">{{ status }}</span>
+    {% endif %}
 </p>
+
+-
+{% for task in tasks %}
+    <p>
+        <b>{% trans 'Task Id' %}:</b> {{ task.task_id }}<br>
+        <b>{% trans 'Task start date' %}:</b> {{ task.start_time }}<br>
+        <b>{% trans 'Task end date' %}:</b> {{ task.end_time }}<br>
+        <b>{% trans 'Task result' %}:</b> {{ task.result }}
+    </p>
+    <br>
+{% endfor %}
